<resources>
    <string name="app_name">MY-BSCIT</string>
    <string name="notification_channel_id">SEM-06</string>
    <string name="registration_message">MY-BSCIT REGISTRATION</string>
    <string name="welcome_message">Hey, Which Subjects Do You Wish To Test ?</string>
    <string name="demo_percent">100 %</string>
    <string name="notices">NOTICES</string>
    <string name="notices_detail">NOTICES DETAIL</string>
    <string name="not_registered">NOT REGISTERED? REGISTER HERE</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="enter_credentials">ENTER CREDENTIALS</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="order_receipt">ORDER RECEIPT</string>
    <string name="manish_talreja">MANISH TALREJA</string>
    <string name="txn_success">TXN_SUCCESS</string>
    <string name="order_number">2020062711469833137409</string>
    <string name="price">₹ 125/-</string>
    <string name="academic_year">2020–21</string>
    <string name="enjoy_premium">ENJOY PREMIUM</string>
    <string name="pdf_settings">PDF SETTINGS</string>
    <string name="pdf_reader_settings">PDF READER SETTINGS</string>
    <string name="pdf_viewer_settings">PDF VIEWER SETTINGS</string>
    <string name="double_tap">DOUBLE TAP</string>
    <string name="dark_mode">DARK MODE</string>
    <string name="reset">RESET</string>
    <string name="save">SAVE</string>
    <string name="fit_each_page">FIT EACH PAGE</string>
    <string name="horizontal_scroll">HORIZONTAL SCROLL</string>
    <string name="dummy_question">01 / 40</string>
    <string name="submit">SUBMIT</string>
    <string name="dummy_time">05:00</string>
    <string name="option_01">OPTION 01</string>
    <string name="option_02">OPTION 02</string>
    <string name="option_03">OPTION 03</string>
    <string name="option_04">OPTION 04</string>
    <string name="registration">REGISTRATION</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="already_registered">ALREADY REGISTERED</string>
    <string name="dummy_blogger_heading">PLACEMENT NOTICE (28–06–2020)</string>
    <string name="long_message_01">MANISH MAHESH TALREJA, A DEVELOPER FROM MIRA BHAYANDER ROAD HAD MADE AN ANDROID APPLICATION ABOUT BYE-CORONA, ALSO HE HAS MADE VARIOUS APPLICATIONS LIKE MY-BSCIT AND SO ON</string>
    <string name="settings">SETTINGS</string>
    <string name="title_message">MY-BSCIT (SEM 06)</string>
    <string name="synchronize">SYNCHRONIZE</string>
    <string name="profile">PROFILE</string>
    <string name="question">QUESTION :</string>
    <string name="selected_answer">SELECTED ANSWER :</string>
    <string name="correct_answer">CORRECT ANSWER :</string>
    <string name="iot_viva">SIC - VIVA</string>
    <string name="awp_viva">BI - VIVA</string>
    <string name="ai_viva">PGIS - VIVA</string>
    <string name="ej_viva">AMP - VIVA</string>
    <string name="terms_of_use">I AGREE TO THE TERMS OF USE</string>
    <string name="hello">HELLO</string>
    <string name="score">SCORE</string>
    <string name="show_answers">SHOW ANSWERS</string>
    <string name="spm_quiz">SQA - QUIZ</string>
    <string name="iot_quiz">SIC - QUIZ</string>
    <string name="awp_quiz">BI - QUIZ</string>
    <string name="ai_quiz">PGIS - QUIZ</string>
    <string name="lsa_quiz">EN - QUIZ</string>
    <string name="ej_quiz">ITSM - QUIZ</string>
    <string name="ngt_quiz">CL - QUIZ</string>
    <string name="view_profile">VIEW PROFILE</string>
    <string name="my_phone">+91 9833137409</string>
    <string name="my_email">MANISHTALREJA189@GMAIL.COM</string>
    <string name="sem_05">SEM - 06</string>
    <string name="freemium">FREEMIUM</string>
    <string name="logout">LOGOUT</string>
    <string name="answers">ANSWERS</string>
    <string name="dummy_file">USIT5P2 - SOLUTION.PDF</string>
    <string name="premium_features">PREMIUM FEATURES</string>
    <string name="buy_premium">BUY PREMIUM (RS. 125)</string>
    <string name="manish_mahesh_talreja">MANISH MAHESH TALREJA</string>
    <string name="classroom">CLASSROOM</string>
    <string name="play_store">PLAY STORE</string>
    <string name="youtube">YOUTUBE</string>
    <string name="telegram">TELEGRAM</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="gmail">GMAIL</string>
    <string name="play_quiz">CLICK ME TO PLAY QUIZ</string>
    <string name="download">DOWNLOAD</string>
    <string name="access_course_contents">ACCESS COURSE CONTENTS</string>
    <string name="play_quiz_game">PLAY QUIZ GAME</string>
    <string name="course_content">COURSE CONTENT</string>
    <string name="downloaded_files">DOWNLOADED FILES</string>
    <string name="latest_notices">LATEST NOTICES</string>
    <string name="spm_prac">PD - BOOK</string>
    <string name="ai_prac">PGIS - PRAC</string>
    <string name="lsa_prac">EN - PRAC</string>
    <string name="spm_manual">BLACK BOOK</string>
    <string name="iot_manual">SIC - MANUAL</string>
    <string name="awp_manual">BI - MANUAL</string>
    <string name="ai_manual">PGIS - MANUAL</string>
    <string name="lsa_manual">EN - MANUAL</string>
    <string name="ej_manual">AMP - MANUAL</string>
    <string name="iot_prac">SIC - PRAC</string>
    <string name="awp_prac">BI - PRAC</string>
    <string name="ej_prac">AMP - PRAC</string>
    <string name="spm_text">SQA - TEXT</string>
    <string name="iot_text">SIC - TEXT</string>
    <string name="awp_text">BI - TEXT</string>
    <string name="ai_text">PGIS - TEXT</string>
    <string name="lsa_text">EN - TEXT</string>
    <string name="ej_text">ITSM - TEXT</string>
    <string name="ngt_text">CL - TEXT</string>
    <string name="raspberry_os">CISCO</string>
    <string name="vs_studio">POWER BI</string>
    <string name="python">QGIS</string>
    <string name="rhel">ANDROID</string>
    <string name="my_bscit_privacy_policy">MY-BSCIT PRIVACY POLICY</string>
    <string name="cookies">COOKIES</string>
    <string name="service_providers">SERVICE PROVIDERS</string>
    <string name="security">SECURITY</string>
    <string name="links_to_other_sites">LINKS TO OTHER SITES</string>
    <string name="children_privacy">CHILDREN\'S PRIVACY</string>
    <string name="contact_us">CONTACT US</string>
    <string name="long_message_02">I MAY UPDATE OUR PRIVACY POLICY FROM TIME TO TIME. THUS, YOU ARE ADVISED TO REVIEW THIS PAGE PERIODICALLY FOR ANY CHANGES. I WILL NOTIFY YOU OF ANY CHANGES BY POSTING THE NEW PRIVACY POLICY ON THIS PAGE.\n\n THIS POLICY IS EFFECTIVE AS OF 2020–07–01</string>
    <string name="long_message_03">I MAY EMPLOY THIRD-PARTY COMPANIES AND INDIVIDUALS DUE TO THE FOLLOWING REASONS:\n\n TO FACILITATE OUR SERVICE;\n\n TO PROVIDE THE SERVICE ON OUR BEHALF;\n\n TO PERFORM SERVICE-RELATED SERVICES; OR\n\n TO ASSIST US IN ANALYZING HOW OUR SERVICE IS USED.\n\n I WANT TO INFORM USERS OF THIS SERVICE THAT THESE THIRD PARTIES HAVE ACCESS TO YOUR PERSONAL INFORMATION. THE REASON IS TO PERFORM THE TASKS ASSIGNED TO THEM ON OUR BEHALF. HOWEVER, THEY ARE OBLIGATED NOT TO DISCLOSE OR USE THE INFORMATION FOR ANY OTHER PURPOSE.</string>
    <string name="long_message_04">COOKIES ARE FILES WITH A SMALL AMOUNT OF DATA THAT ARE COMMONLY USED AS ANONYMOUS UNIQUE IDENTIFIERS. THESE ARE SENT TO YOUR BROWSER FROM THE WEBSITES THAT YOU VISIT AND ARE STORED ON YOUR DEVICE\'S INTERNAL MEMORY.\n\n THIS SERVICE DOES NOT USE THESE “COOKIES” EXPLICITLY. HOWEVER, THE APP MAY USE THIRD PARTY CODE AND LIBRARIES THAT USE “COOKIES” TO COLLECT INFORMATION AND IMPROVE THEIR SERVICES. YOU HAVE THE OPTION TO EITHER ACCEPT OR REFUSE THESE COOKIES AND KNOW WHEN A COOKIE IS BEING SENT TO YOUR DEVICE. IF YOU CHOOSE TO REFUSE OUR COOKIES, YOU MAY NOT BE ABLE TO USE SOME PORTIONS OF THIS SERVICE.</string>
    <string name="spm_videos">SQA - VIDEOS</string>
    <string name="iot_videos">SIC - VIDEOS</string>
    <string name="awp_videos">BI - VIDEOS</string>
    <string name="ai_videos">PGIS - VIDEOS</string>
    <string name="lsa_videos">EN - VIDEOS</string>
    <string name="ej_videos">ITSM - VIDEOS</string>
    <string name="ngt_videos">CL - VIDEOS</string>
    <string name="spm_video">SQA - VIDEO</string>
    <string name="iot_video">SIC - VIDEO</string>
    <string name="awp_video">BI - VIDEO</string>
    <string name="ai_video">PGIS - VIDEO</string>
    <string name="lsa_video">EN - VIDEO</string>
    <string name="ej_video">ITSM - VIDEO</string>
    <string name="ngt_video">CL - VIDEO</string>
    <string name="spm_mcq">SQA - MCQ</string>
    <string name="iot_mcq">SIC - MCQ</string>
    <string name="awp_mcq">BI - MCQ</string>
    <string name="ai_mcq">PGIS - MCQ</string>
    <string name="lsa_mcq">EN - MCQ</string>
    <string name="ej_mcq">ITSM - MCQ</string>
    <string name="ngt_mcq">CL - MCQ</string>
    <string name="question_paper">KEY - MAY 19</string>
    <string name="question_banks">QUESTION BANKS</string>
    <string name="ans_key_nov_18">QP - APR 19</string>
    <string name="ans_key_nov_19">QP - NOV 19</string>
    <string name="syllabus">SYLLABUS</string>
    <string name="que_papers">KEY - MAY 19</string>
    <string name="que_banks">QUE BANKS</string>
    <string name="key_nov_18">QP - APR 19</string>
    <string name="key_nov_19">QP - NOV 19</string>
    <string name="spm_notes">SQA - NOTES</string>
    <string name="iot_notes">SIC - NOTES</string>
    <string name="awp_notes">BI - NOTES</string>
    <string name="ai_notes">PGIS - NOTES</string>
    <string name="lsa_notes">EN - NOTES</string>
    <string name="ej_notes">ITSM - NOTES</string>
    <string name="ngt_notes">CL - NOTES</string>
    <string name="spm_note">SQA - NOTE</string>
    <string name="iot_note">SIC - NOTE</string>
    <string name="awp_note">BI - NOTE</string>
    <string name="ai_note">PGIS - NOTE</string>
    <string name="lsa_note">EN - NOTE</string>
    <string name="ej_note">ITSM - NOTE</string>
    <string name="ngt_note">CL - NOTE</string>
    <string name="spm_book">SQA - BOOK</string>
    <string name="iot_book">SIC - BOOK</string>
    <string name="awp_book">BI - BOOK</string>
    <string name="ai_book">PGIS - BOOK</string>
    <string name="lsa_book">EN - BOOK</string>
    <string name="ej_book">ITSM - BOOK</string>
    <string name="ngt_book">CL - BOOK</string>
    <string name="request_content">REQUEST CONTENT</string>
    <string name="request">REQUEST</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="information_collection_and_use">INFORMATION COLLECTION AND USE</string>
    <string name="log_data">LOG DATA</string>
    <string name="long_message_05">I WANT TO INFORM YOU THAT WHENEVER YOU USE MY SERVICE, IN A CASE OF AN ERROR IN THE APP I COLLECT DATA AND INFORMATION (THROUGH THIRD PARTY PRODUCTS) ON YOUR PHONE CALLED LOG DATA. THIS LOG DATA MAY INCLUDE INFORMATION SUCH AS YOUR DEVICE INTERNET PROTOCOL (“IP”) ADDRESS, DEVICE NAME, OPERATING SYSTEM VERSION, THE CONFIGURATION OF THE APP WHEN UTILIZING MY SERVICE, THE TIME AND DATE OF YOUR USE OF THE SERVICE, AND OTHER STATISTICS.</string>
    <string name="long_message_06">FOR A BETTER EXPERIENCE, WHILE USING OUR SERVICE, I MAY REQUIRE YOU TO PROVIDE US WITH CERTAIN PERSONALLY IDENTIFIABLE INFORMATION, INCLUDING BUT NOT LIMITED TO USER\'S NAME, EMAIL ID, PHONE NUMBER. THE INFORMATION THAT I REQUEST WILL BE RETAINED ON YOUR DEVICE AND IS NOT COLLECTED BY ME IN ANY WAY.\n\n THE APP DOES USE THIRD PARTY SERVICES THAT MAY COLLECT INFORMATION USED TO IDENTIFY YOU.\n\n LINK TO PRIVACY POLICY OF THIRD PARTY SERVICE PROVIDERS USED BY THE APP\n\n GOOGLE PLAY SERVICES.\n GOOGLE ANALYTICS FOR FIREBASE.</string>
    <string name="name">NAME</string>
    <string name="surname">SURNAME</string>
    <string name="email">EMAIL</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="email_address">EMAIL ADDRESS</string>
</resources>