<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:gravity="center"
    style="@style/SmallHorizontalLinearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/edit_style"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            style="@style/MainLinearLayout">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:contentDescription="@string/app_name"

                app:srcCompat="@drawable/sem06" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="@dimen/_275sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:text="@string/pdf_reader_settings"
                android:textColor="@color/cal"
                android:textSize="@dimen/_22sdp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchDouble"
                android:layout_width="@dimen/_275sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/syndor"
                android:text="@string/double_tap"
                android:textColor="#000000"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchDark"
                android:layout_width="@dimen/_275sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/syndor"
                android:text="@string/dark_mode"
                android:textColor="#000000"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchScroll"
                android:layout_width="@dimen/_275sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/syndor"
                android:text="@string/horizontal_scroll"
                android:textColor="#000000"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchFit"
                android:layout_width="@dimen/_275sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/syndor"
                android:text="@string/fit_each_page"
                android:textColor="#000000"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_50sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveSetting"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_10sdp"
                    android:backgroundTint="#D309F6"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/resetDefault"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_10sdp"
                    android:backgroundTint="#D309F6"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>