<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/MainLinearLayout">

        <LinearLayout style="@style/CardLinearLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/SPM"
                style="@style/SubjectCard"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout style="@style/SmallHorizontalLinearLayout">

                    <ImageView
                        style="@style/SubjectImage"
                        android:contentDescription="@string/app_name"

                        app:srcCompat="@drawable/spm" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/SubjectText"

                        android:text="@string/spm_text" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/IOT"
                style="@style/SubjectCard"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout style="@style/SmallHorizontalLinearLayout">

                    <ImageView
                        style="@style/SubjectImage"
                        android:contentDescription="@string/app_name"

                        app:srcCompat="@drawable/iot" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/SubjectText"

                        android:text="@string/iot_text" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/AWP"
                style="@style/SubjectCard"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout style="@style/SmallHorizontalLinearLayout">

                    <ImageView
                        style="@style/SubjectImage"
                        android:contentDescription="@string/app_name"

                        app:srcCompat="@drawable/awp" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/SubjectText"

                        android:text="@string/awp_text" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/AI"
                style="@style/SubjectCard"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout style="@style/SmallHorizontalLinearLayout">

                    <ImageView
                        style="@style/SubjectImage"
                        android:contentDescription="@string/app_name"

                        app:srcCompat="@drawable/ai" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/SubjectText"

                        android:text="@string/ai_text" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/LSA"
                style="@style/SubjectCard"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout style="@style/SmallHorizontalLinearLayout">

                    <ImageView
                        style="@style/SubjectImage"
                        android:contentDescription="@string/app_name"

                        app:srcCompat="@drawable/lsa" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/SubjectText"

                        android:text="@string/lsa_text" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/EJ"
                style="@style/SubjectCard"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout style="@style/SmallHorizontalLinearLayout">

                    <ImageView
                        style="@style/SubjectImage"
                        android:contentDescription="@string/app_name"

                        app:srcCompat="@drawable/ej" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/SubjectText"

                        android:text="@string/ej_text" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/NGT"
            style="@style/SubjectCard"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="center"
                style="@style/SmallHorizontalLinearLayout">

                <ImageView
                    style="@style/SubjectImage"
                    android:contentDescription="@string/app_name"

                    app:srcCompat="@drawable/ngt" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/SubjectText"

                    android:text="@string/ngt_text" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
